[gd_scene load_steps=12 format=2]

[ext_resource path="res://bg.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Controller.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Levels/Woods.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Levels/CityDay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Levels/NeonCity.tscn" type="PackedScene" id=9]

[sub_resource type="GradientTexture2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1920, 10 )

[node name="Main" type="Node2D" groups=["EnemyBasic", "EnemyFast", "EnemyPowerUp", "EnemyShield", "EnemyTough", "test"]]

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 1073, 1018 )
scale = Vector2( 41.76, 1 )
texture = SubResource( 2 )

[node name="CityDay" parent="." instance=ExtResource( 8 )]
visible = false
offset = Vector2( 920, 510 )
scale = Vector2( 0.8, 0.8 )
transform = Transform2D( 0.8, 0, 0, 0.8, 920, 510 )

[node name="Woods" parent="." instance=ExtResource( 6 )]
visible = false
offset = Vector2( 900, 550 )
scale = Vector2( 0.9, 0.9 )
transform = Transform2D( 0.9, 0, 0, 0.9, 900, 550 )

[node name="Neon" parent="." instance=ExtResource( 9 )]
visible = false
offset = Vector2( 1000, 500 )
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 1000, 500 )

[node name="RoomArea" type="Area2D" parent="."]
position = Vector2( 408, 424 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
position = Vector2( 511, 10 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="RoomArea"]
wait_time = 1.5
autostart = true

[node name="Bg" type="Sprite" parent="RoomArea"]
visible = false
position = Vector2( 510, 91 )
scale = Vector2( 0.955667, 0.953 )
texture = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="RoomArea"]

[node name="StreakTimer" type="Timer" parent="RoomArea"]
wait_time = 2.0
one_shot = true

[node name="Wall2" parent="." instance=ExtResource( 2 )]
position = Vector2( -32, 713 )
scale = Vector2( -6.53148, -51.3346 )

[node name="Wall3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1880, 720 )
scale = Vector2( -6.53148, -51.3346 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 904, 856 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -452, -423 )
anchor_mode = 0
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1833
limit_bottom = 1025
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource( 7 )

[node name="ShakeTimer" type="Timer" parent="Player/Camera2D"]
wait_time = 0.1
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 4 )]

[connection signal="timeout" from="RoomArea/Timer" to="RoomArea" method="_on_Timer_timeout"]
[connection signal="timeout" from="RoomArea/StreakTimer" to="RoomArea" method="_on_StreakTimer_timeout"]
[connection signal="timeout" from="Player/Camera2D/ShakeTimer" to="Player/Camera2D" method="_on_ShakeTimer_timeout"]
